--- a/pre.html
+++ b/pre.html
@@ -22,7 +22,7 @@ Zhengyang Fang
 <div id="motivation" class="slide section level2">
 <h2>Motivation</h2>
 <ul>
-<li>Example:</li>
+<li>Example: Deblurring -&gt; denoising</li>
 </ul>
 <p><span class="math inline">\(y\)</span>: observation. <span class="math inline">\(x\)</span>: the “truth”. <span class="math inline">\(A\)</span>: forward transform.</p>
 <p><span class="math display">\[
@@ -41,9 +41,19 @@ x^{(k+1)}=\arg\min_x \frac12\|x-\tilde x\|_2^2+t_k\tau\|x\|_{TV}.
 <div id="algorithm" class="slide section level2">
 <h2>Algorithm</h2>
 <ul>
-<li>Intro to ADMM</li>
-<li>MAP framework</li>
+<li><p>Intro to ADMM</p>
+<ul>
+<li>dual descent</li>
+<li>Multiplier method</li>
+<li>ADMM</li>
+</ul></li>
+<li><p>MAP framework</p></li>
 </ul>
+<p><span class="math display">\[
+\max_x f(x|y)\propto f(y|x)f(x),
+\]</span> which is equivalent to maximize <span class="math display">\[
+\max_x \log(y|x)+\log(x)=l(y;x)+\beta \cdot s(x)
+\]</span></p>
 </div>
 <div id="experiment-and-recent-work-optional" class="slide section level2">
 <h2>Experiment and recent work (optional)</h2>
