--- a/pre.html
+++ b/pre.html
@@ -55,6 +55,30 @@ x^{(k+1)}=\arg\min_x \frac12\|x-\tilde x\|_2^2+t_k\tau\|x\|_{TV}.
 \max_x \log(y|x)+\log(x)=l(y;x)+\beta \cdot s(x)
 \]</span></p>
 </div>
+<div id="algorithm-1" class="slide section level2">
+<h2>Algorithm</h2>
+<ul>
+<li>Framework in this paper</li>
+</ul>
+<p>Solve <span class="math display">\[
+\begin{aligned}
+(\hat x,\hat v)=&amp;\arg\min_{x,v}\{l(y;x)+\beta\cdot s(v)\},\\
+&amp;s.t.x=v.
+\end{aligned}
+\]</span></p>
+<p><span class="math inline">\(l(y;x)\)</span>: the forward transform.</p>
+<p><span class="math inline">\(\beta\cdot s(v)\)</span>: the prior.</p>
+<p>Algorithm:</p>
+<blockquote>
+<p>repeat until converge: <span class="math display">\[
+\begin{aligned}
+&amp;\hat x\leftarrow \arg\min_x\left\{l(y;x)+\frac\lambda 2\|x-(\hat v-u)\|_2^2\right\},\\
+&amp;\hat v\leftarrow \arg\min_v\left\{\frac \lambda 2\|v-(\hat x +u)\|^2_2+\beta s(v)\right\},\\
+&amp;v\leftarrow u+(\hat x-\hat v).
+\end{aligned}
+\]</span></p>
+</blockquote>
+</div>
 <div id="experiment-and-recent-work-optional" class="slide section level2">
 <h2>Experiment and recent work (optional)</h2>
 <p>optional</p>
