--- a/pre.html
+++ b/pre.html
@@ -126,9 +126,17 @@ s.t.&amp;~Ax+Bz=c.
 <div id="related-work" class="slide section level2">
 <h2>Related work</h2>
 <ul>
+<li><p>Why ADMM</p>
+<ul>
+<li><a href="http://www.stronglyconvex.com/blog/admm-to-prox-grad.html" class="uri">http://www.stronglyconvex.com/blog/admm-to-prox-grad.html</a></li>
+</ul></li>
 <li><p>Convergence</p>
 <ul>
 <li>Chan, Stanley H., Xiran Wang, and Omar A. Elgendy. “Plug-and-play ADMM for image restoration: Fixed-point convergence and applications.” IEEE Transactions on Computational Imaging 3, no. 1 (2017): 84-98.</li>
+</ul></li>
+<li><p>Extension</p>
+<ul>
+<li>Zhang, Kai, Wangmeng Zuo, and Lei Zhang. “Deep Plug-and-Play Super-Resolution for Arbitrary Blur Kernels.” arXiv preprint arXiv:1903.12529 (2019).</li>
 </ul></li>
 </ul>
 </div>
