--- a/pre.html
+++ b/pre.html
@@ -393,17 +393,10 @@ x^{(k+1)}=\arg\min_x \frac12\|x-\tilde x\|_2^2+t_k\tau\|x\|_{TV}.
 </ul></li>
 </ul>
 </div>
-<div id="why-the-plug-and-play-model-is-important" class="slide section level2">
-<h1>Why the Plug and Play Model Is Important</h1>
-<ul>
-<li><p>In the previous slide, solving the forward (the forwards transform) plus prior (the denoising part) model is specific to the problem</p></li>
-<li><p>It is sub optimal to create a new algorithm every time we have a different combination of a forward and prior model</p></li>
-<li><p>The goal of the Plug-and-Play Priors for model reconstruction aims to solve that issue</p></li>
-</ul>
-</div>
 <div id="brief-background" class="slide section level2">
 <h1>Brief Background</h1>
 <ul>
+<li><p>In the previous slide, solving the forward (the forwards transform) plus prior (the denoising part) model is specific to the problem, but we want something more general</p></li>
 <li><p>There has been great progress in improving forward models and denoising algorithms, but little progress has been made to cleanly integrate those two steps</p></li>
 <li><p>There has been attempts (ex. BM3D) to incorporate advanced priors with general inverse problems, but the approaches are not directly applicable to a general inverse problem</p></li>
 </ul>
@@ -413,7 +406,10 @@ x^{(k+1)}=\arg\min_x \frac12\|x-\tilde x\|_2^2+t_k\tau\|x\|_{TV}.
 <ul>
 <li><p>this model provides the flexibility to combine state of the art forward models with state of the art denoising models</p></li>
 <li><p>allows us to use denoising methods that are not explicitly formulated as an optimization problem</p></li>
-<li><p>simplifies software integration by decoupling the prior and forwards model terms</p></li>
+<li><p>simplifies software integration by decoupling the prior and forwards model terms</p>
+<ul>
+<li>allows different combination of a forward and prior model without having to dramatically change the code for that a certain combination</li>
+</ul></li>
 </ul>
 </div>
 <div id="algorithm-1" class="slide section level2">
